@@ -4,6 +4,13 @@ use warnings;
 
 use parent 'TestSchema::ResultSet';
 
-__PACKAGE__->load_components(qw{ Helper::ResultSet::RemoveColumns Helper::ResultSet::Union Helper::ResultSet::Random Helper::ResultSet::ResultClassDWIM Helper::ResultSet::Shortcut });
+__PACKAGE__->load_components(qw{
+   Helper::ResultSet::Bare
+   Helper::ResultSet::RemoveColumns
+   Helper::ResultSet::Union
+   Helper::ResultSet::Random
+   Helper::ResultSet::ResultClassDWIM
+   Helper::ResultSet::Shortcut
+});
 
 1;
